tests/fixtures/errors/multiple_root_rows.norm
:root
:data
name
Alice
Bob
